# Pomavo.MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cli.py  pyproject.toml  test_client.py
skills/pomavo-automation/: SKILL.md
skills/pomavo-mutation-dsl/: SKILL.md
skills/pomavo-query-language/: SKILL.md
skills/pomavo-report-layout/: SKILL.md
skills/pomavo-screen/: SKILL.md
skills/pomavo-screen-layout/: SKILL.md
skills/pomavo-shared-fields/: SKILL.md
skills/pomavo-template/: SKILL.md
skills/pomavo-template-link/: SKILL.md
skills/pomavo-workflow/: SKILL.md
src/pomavo_mcp/: __init__.py  client.py  models.py  server.py
