[project]
name = "pomavo-mcp"
version = "0.1.0"
description = "MCP server for Pomavo ticket management system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.0.0",
]

[project.scripts]
pomavo-mcp = "pomavo_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pomavo_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
